--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,7 @@ scipy>=1.4.1
 scikit-learn>=0.22.1
 matplotlib>=3.1.3
 pandas>=1.0.3
-nltk==3.4.5
+tensorflow>==2.1.0
+keras>==2.3.1
+Flask-MySQLdb>==0.2.0
+nltk>==3.4.5
